--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,11 @@ spring.jpa.properties.hibernate.format_sql=true
 #Security
 #NEVER
 server.error.include-stacktrace=ALWAYS
+
+# App Prperties
+bbcag.app.jwtSecret=asdz89v2zsadkhfhsaasdklsadjlkaskj
+# 10 Days
+bbcag.app.jwtExpirationMs= 86400000
+bbcag.app.urls.register=/register
+bbcag.app.urls.login=/login
+bbcag.app.urls.apidocs=/v3/api-docs/**, /swagger-ui.html, /swagger-ui/**
