--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.format_sql=true
 #NEVER
 server.error.include-stacktrace=ALWAYS
 
-# App Prperties
+# App Properties
 bbcag.app.jwtSecret=asdz89v2zsadkhfhsaasdklsadjlkaskj
 # 10 Days
 bbcag.app.jwtExpirationMs= 86400000
