--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,4 @@ bbcag.app.jwtExpirationMs= 86400000
 bbcag.app.urls.register=/register
 bbcag.app.urls.login=/login
 bbcag.app.urls.apidocs=/v3/api-docs/**, /swagger-ui.html, /swagger-ui/**
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
