--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     implementation 'com.auth0:java-jwt:3.12.0'
 
     //open api documentation
-    //implementation 'org.springdoc:springdoc-openapi-ui:1.5.2'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.5.2'
 
     //database connector
     runtimeOnly 'com.h2database:h2:2.1.210'
